<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_tint"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:textColor="@android:color/white"
        android:background="@color/colorSecondry"
        android:text="@string/cases"
        android:textSize="@dimen/sp_of_18"
        android:gravity="center"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/fragment_case_button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wuganjiazai"/>

<!--    <androidx.appcompat.widget.AppCompatButton-->
<!--        android:id="@+id/fragment_case_button2"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/suoluetu"/>-->

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/fragment_case_button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gujiaping"/>

</LinearLayout>